simplify and fix padding of blog paragraph on mobile

--- a/src/components/Blog/index-mobile.css
+++ b/src/components/Blog/index-mobile.css
@@ -7,10 +7,7 @@
 		color: #7a7c84;
 		margin-left: 0;
 		margin-right: 0%;
-		padding-bottom: 5;
-		padding-left: 12px;
-		padding-right: 12px;
-		padding-top: 12px;
+		padding: 12px;
 	}
 
   .blog h2 {
